# face-recognition-trainer

./: .gitignore  Cargo.toml  LICENSE  README.md
augmentation/: image_augmentation.py  run.py
cli/: Cargo.toml  run.sh
cli/src/: main.rs
compreface/compreface-api/: Cargo.toml
compreface/compreface-api/src/: compreface_client.rs  lib.rs  train.rs
compreface/compreface-contracts/: Cargo.toml
compreface/compreface-contracts/src/: lib.rs
double-take/double-take-contracts/: Cargo.toml
double-take/double-take-contracts/src/: lib.rs
shared-api/: Cargo.toml
shared-api/src/: lib.rs  utils.rs
shared-lib/: Cargo.toml
shared-lib/src/: lib.rs
use-cases/: .env.example  compare-augmentation.sh
