[package]
name = "shared-api"
version = "0.1.0"
edition = "2021"
authors = ["Ron Zigelman <roniz.net@gmail.com>"]

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.4", features = ["derive", "env"] }
tracing = "0.1.40"
tokio = { version = "1.39.2", features = ["full"] }

compreface-contracts = { path = "../compreface/compreface-contracts" }
double-take-contracts = { path = "../double-take/double-take-contracts" }
anyhow = "1.0.86"

[dev-dependencies]
tempfile = "3.12.0"
