[package]
name = "compreface-api"
version = "0.1.0"
edition = "2021"
authors = ["Ron Zigelman <roniz.net@gmail.com>"]

[dependencies]
compreface-contracts = { path = "../compreface-contracts" }
shared-api = { path = "../../shared-api" }
async-trait = "0.1.81"
stream-utils = { git = "https://github.com/r-zig/stream-utils.git" }
tracing = "0.1.40"
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.7", features = ["stream", "multipart", "json"] }
mime_guess = "2.0.5"
anyhow = "1.0.86"
